# Komunitas

./: .gitignore  .npmrc  README.md  drizzle.config.ts  package.json  playwright.bugfix.config.ts  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.ts
contracts/: Cargo.toml  DEPLOYMENT.md  Makefile  rust-toolchain.toml
contracts/komunitas-fund/: Cargo.toml
contracts/komunitas-fund/src/: error.rs  lib.rs  storage.rs  test.rs  types.rs
contracts/komunitas-fund/test_snapshots/test/: contribute_tracks_member_and_totals.1.json  contribute_zero_fails.1.json  double_initialize_fails.1.json  double_vote_is_rejected.1.json  initialize_records_admin_and_token.1.json  no_majority_keeps_proposal_active.1.json  passed_then_funded_via_disburse.1.json  paused_blocks_contributions.1.json  single_member_majority_auto_disburses.1.json  vote_on_missing_proposal_fails.1.json
contracts/scripts/: deploy.sh
docs/: ARCHITECTURE.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/dashboard/: layout.tsx  page.tsx
src/app/proposals/: layout.tsx  page.tsx
src/app/stats/: layout.tsx  page.tsx
src/components/: AppShell.tsx  ConnectButton.tsx  Logo.tsx  ProposalCard.tsx  WalletProvider.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx
src/lib/: api.ts  utils.ts  wallet.ts
src/server/config/: env.ts  stellar.ts
tests/e2e/: prod-real.spec.ts
tests/server/: bug-fixes.spec.ts  cookies.test.ts  rateLimit.test.ts
tests/unit/: auth.contributor.test.ts  fund.service.test.ts  proposal.service.test.ts  utils.test.ts
(+45 files in other folders)
