[package]
name = "komunitas-fund"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"
description = "Soroban community treasury: on-chain XLM contributions, proposals, weighted voting, and majority-gated disbursement (Komunitas)."

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = "22"

[dev-dependencies]
soroban-sdk = { version = "22", features = ["testutils"] }
